# mutmut

./: .dockerignore  .gitignore  .grobl.toml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.rst  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  MUTATION_IMPROVEMENTS.md  Makefile  Pipfile  README.md  README.rst  TODO.md  cached-results-plan.txt  import-linter.toml  justfile  mkdocs.yml  mutmut3.py  mutmut_config.py  mypy.ini  pyproject.toml  requirements.txt  result_browser_layout.tcss  ruff.default.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini  (+1 more)
.codex/skills/changelog-release/: SKILL.md
.codex/skills/dependencies/: SKILL.md
.codex/skills/patch-only-fallback/: SKILL.md
.github/workflows/: CI.yml  tests.yml
docker/: Dockerfile.test
docs/: ARCHITECTURE.md  AUTHORS.md  Makefile  conf.py  index.html  index.md  index.rst  make.bat
docs/_templates/: ghbuttons.html  sidebarlogo.html
docs/_themes/: flask_theme_support.py
e2e_projects/benchmark_1k/: README.md  benchmark_results.json  mutmut_preload.txt  pyproject.toml  requirements.txt  run_benchmark.py
e2e_projects/benchmark_1k/src/benchmark/: __init__.py  arguments.py  booleans.py  comparisons.py  complex.py  numbers.py  operators.py  returns.py  strings.py
e2e_projects/benchmark_1k/tests/: conftest.py  test_arguments.py  test_booleans.py  test_comparisons.py  test_complex.py  test_numbers.py  test_operators.py  test_returns.py  test_strings.py
e2e_projects/config/: README.md  pyproject.toml
e2e_projects/config/config_pkg/: ignore_me.py  math.py
e2e_projects/config/config_pkg/logic/: __init__.py  math.py
e2e_projects/config/config_pkg/utils/: utils.py
e2e_projects/config/data/: data.json
e2e_projects/config/tests/: test_main.py
e2e_projects/config/tests/ignored/: test_ignored.py
e2e_projects/config/tests/main/: test_main.py
e2e_projects/hot_fork_basic/: pyproject.toml
e2e_projects/hot_fork_gevent/: README.md  pyproject.toml
e2e_projects/mutate_only_covered_lines/: README.md  pyproject.toml
e2e_projects/mutate_only_covered_lines/src/mutate_only_covered_lines/: __init__.py  ignore_me.py  omit_me.py
e2e_projects/mutate_only_covered_lines/tests/: test_mutate_only_covered_lines.py
e2e_projects/mutate_only_covered_lines/tests/main/: test_mutate_only_covered_lines.py
e2e_projects/mutate_only_covered_lines/tests/other/: test_that_should_not_be_included.py
e2e_projects/my_lib/: README.md  pyproject.toml
e2e_projects/my_lib/src/my_lib/: __init__.py
e2e_projects/my_lib/tests/: test_my_lib.py
e2e_projects/py3_14_features/: README.md  pyproject.toml
e2e_projects/type_checking/: README.md  pyproject.toml
e2e_projects/type_checking/src/type_checking/: __init__.py
e2e_projects/type_checking/tests/: test_type_checking.py
e2e_projects/type_checking_mypy/: README.md  pyproject.toml
e2e_projects/type_checking_mypy/src/type_checking_mypy/: __init__.py
e2e_projects/type_checking_mypy/tests/: test_type_checking_mypy.py
mutmut/: __init__.py  __main__.py  cache.py  code_coverage.py  custom_process_pool.py  file_collection.py  file_mutation.py  import_hook.py  loader.py  mutator.py  mutators.py  node_mutation.py  patterns.py  plugin.py  pytest_wrapper.py  pytestplugin.py  queue_manager.py  result_browser_layout.tcss  runner.py  terminal.py  tester.py  trampoline_templates.py  utils.py
mutmut/cli/: cli.py  cli_helper.py
mutmut/cli/helper/: run.py  (+5 more)
mutmut/helpers/: astpattern.py  config.py  context.py  progress.py  relativemutationid.py
mutmut/mutations/: and_or_test_mutation.py  argument_mutation.py  decorator_mutation.py  expression_mutation.py  f_string_mutation.py  keyword_mutation.py  lambda_mutation.py  mutation.py  name_mutation.py  number_mutation.py  operator_mutation.py  string_mutation.py
mutmut/mutator/: mutator.py  mutator_helper.py  mutator_iterator.py  post_order_iterator.py
mutmut/tester/: tester.py  tester_helper.py
mutmut/workers/: __init__.py  same_process.py  separate_process.py
pytest_plugin_test/: conftest.py  foo.py  run_plugin_test  tests.py
scripts/: run_benchmark.sh  run_tests.sh
showcase/: requirements.txt  setup.cfg
src/mutmut/: __init__.py  __main__.py  code_coverage.py  config.py  configuration.py  core.py  file_mutation.py  meta.py  mutation.py  node_mutation.py  result_browser_layout.tcss  runners.py  state.py  stats.py  trampoline_templates.py  type_checking.py
src/nootnoot/: __init__.py  __main__.py  code_coverage.py  config.py  events.py  file_mutation.py  importlinter.toml  meta.py  mutation.py  node_mutation.py  persistence.py  reporting.py  runners.py  state.py  trampoline_templates.py
tests/: conftest.py  test_cache.py  test_check_associations.py  test_configuration.py  test_custom_pool.py  test_file_collection.py  test_generation_error_handling.py  test_init.py  test_integration_mutations.py  test_main.py  test_misc.py  test_mutation regression.py  test_mutation.py  test_mutator.py  test_mutators.py  test_mutmut3.py  test_mutmut_config_hooks.py  test_node_mutation.py  test_nootnoot3.py  test_patterns.py  test_persistence.py  test_record_trampoline_hit.py  test_reporting.py  test_runner.py  test_type_checking.py
tests/data/: module_mutation_expected.py.txt
tests/e2e/: e2e_utils.py  test_cli_json_output.py  test_cli_version.py  test_e2e_config.py  test_e2e_coverage.py  test_e2e_incremental_cache.py  test_e2e_my_lib.py  test_e2e_py3_14.py  test_e2e_result_filter.py  test_e2e_result_snapshots.py  test_e2e_type_checking.py  test_e2e_type_checking_mypy.py
tests/mutation/: test_enum_handling.py  test_mutation.py  test_mutation_runtime.py  test_pragma_handling.py  test_trampoline.py
tests/testdata/: surviving_mutants_show_foo_py.txt  surviving_mutants_show_id_1.txt
tests/threading/: test_timeout.py
tests/unit/: test_configuration.py  test_deprecation_warnings.py  test_generation_error_handling.py  test_stats.py
tests/utils/: test_safe_setproctitle.py
tests/workers/: test_timeout.py
(+106 files in other folders)
