[project]
name = "benchmark-1k"
version = "0.1.0"
description = "Benchmark project for mutmut warmup strategy comparison (~1000 mutants)"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.mutmut]
log_to_file = true
paths_to_mutate = ["src/"]
process_isolation = "hot-fork"
debug = false
hot_fork_warmup = "none"
