[project]
name = "config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "/config_pkg",
  "/tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.mutmut]
debug = true
paths_to_mutate = [ "config_pkg/" ]
do_not_mutate = [ "*ignore*" ]
also_copy = [ "data" ]
max_stack_depth=8 # Includes frames by mutmut, see https://github.com/boxed/mutmut/issues/378
# NOTE: as of writing, the following options are not implemented
# tests_dir = [ "my_tests/" ]
