[project]
name = "mutate_only_covered_lines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.nootnoot]
debug = true
mutate_only_covered_lines = true
tests_dir = [ "tests/main/" ]
do_not_mutate = [ "*ignore*" ]
# do not add paths_to_mutate because we want to test src guessing

[tool.pytest]
asyncio_default_fixture_loop_scope = "function"
