[project]
name = "my-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.mutmut]
debug = true
do_not_mutate_patterns = [
    # disable mutations of all logger.info/debug/... statements
    'logger\.\w+',
    # disable mutating exceptions
    'raise \w+',
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
