[project]
name = "type-checking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "pyright>=1.1.408",
    "pytest>=8.2.0",
]

[tool.mutmut]
debug = true
# also checked with mypy, but via monkeypatching the type_check_command
type_check_command = ["pyrefly", "check", "--output-format=json"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"
