[project]
name = "type-checking-mypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.2.0",
]

[tool.mutmut]
debug = true
type_check_command = ["mypy", "--output", "json", "src"]

[tool.mypy]
strict = true
